[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/menus/shopUpgrades.gd" type="Script" id=1]
[ext_resource path="res://art/menus/char_info.png" type="Texture" id=2]
[ext_resource path="res://art/pickups/coin_icon.png" type="Texture" id=3]
[ext_resource path="res://themes/shop_button.tres" type="Theme" id=4]
[ext_resource path="res://art/menus/upgrade_counter_0.png" type="Texture" id=5]
[ext_resource path="res://art/menus/upgrade_counter_1.png" type="Texture" id=6]
[ext_resource path="res://art/menus/upgrade_counter_2.png" type="Texture" id=7]
[ext_resource path="res://art/menus/upgrade_counter_3.png" type="Texture" id=8]
[ext_resource path="res://art/menus/backgrounds/maddies_shop_bg.png" type="Texture" id=9]
[ext_resource path="res://themes/playerPanelText.tres" type="Theme" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "3",
"speed": 5.0
} ]

[node name="shopUpgrades" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 570.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_top = 567.0
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="description" type="Label" parent="NinePatchRect"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1250.0
margin_bottom = 123.0
theme = ExtResource( 10 )
text = "What new move can I teach you today?"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonExit" type="Button" parent="main"]
margin_left = 150.0
margin_top = 455.0
margin_right = 450.0
margin_bottom = 540.0
theme = ExtResource( 4 )
text = "Exit Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="Control" parent="main"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonItem0" type="Button" parent="main/options"]
margin_left = 150.0
margin_top = 110.0
margin_right = 500.0
margin_bottom = 170.0
theme = ExtResource( 4 )
text = "Health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonItem1" type="Button" parent="main/options"]
margin_left = 150.0
margin_top = 195.0
margin_right = 500.0
margin_bottom = 255.0
theme = ExtResource( 4 )
text = "Extra Lives"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonItem2" type="Button" parent="main/options"]
margin_left = 150.0
margin_top = 280.0
margin_right = 500.0
margin_bottom = 340.0
theme = ExtResource( 4 )
text = "Damage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonItem3" type="Button" parent="main/options"]
margin_left = 150.0
margin_top = 365.0
margin_right = 500.0
margin_bottom = 425.0
theme = ExtResource( 4 )
text = "Luck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cost0" type="Label" parent="main/options"]
margin_left = 500.0
margin_top = 110.0
margin_right = 600.0
margin_bottom = 170.0
theme = ExtResource( 10 )
text = "999"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="main/options/cost0"]
position = Vector2( 125, 30 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="cost1" type="Label" parent="main/options"]
margin_left = 500.0
margin_top = 195.0
margin_right = 600.0
margin_bottom = 255.0
theme = ExtResource( 10 )
text = "999"
align = 2
valign = 1

[node name="Sprite2" type="Sprite" parent="main/options/cost1"]
position = Vector2( 125, 30 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="cost2" type="Label" parent="main/options"]
margin_left = 500.0
margin_top = 280.0
margin_right = 600.0
margin_bottom = 340.0
theme = ExtResource( 10 )
text = "999"
align = 2
valign = 1

[node name="Sprite3" type="Sprite" parent="main/options/cost2"]
position = Vector2( 125, 30 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="cost3" type="Label" parent="main/options"]
margin_left = 500.0
margin_top = 365.0
margin_right = 600.0
margin_bottom = 425.0
theme = ExtResource( 10 )
text = "999"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite4" type="Sprite" parent="main/options/cost3"]
position = Vector2( 125, 30 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="ind0" type="AnimatedSprite" parent="main/options"]
position = Vector2( 90, 140 )
frames = SubResource( 1 )
animation = "0"

[node name="ind1" type="AnimatedSprite" parent="main/options"]
position = Vector2( 90, 225 )
frames = SubResource( 1 )
animation = "0"

[node name="ind2" type="AnimatedSprite" parent="main/options"]
position = Vector2( 90, 310 )
frames = SubResource( 1 )
animation = "0"

[node name="ind3" type="AnimatedSprite" parent="main/options"]
position = Vector2( 90, 395 )
frames = SubResource( 1 )
animation = "0"

[node name="confirm" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="confirm"]
margin_top = 450.0
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="description" type="Label" parent="confirm/NinePatchRect"]
margin_left = 30.0
margin_top = 44.0
margin_right = 1250.0
margin_bottom = 238.0
theme = ExtResource( 10 )
text = "Purchase Double Jump for 300 Coppers?"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonYes" type="Button" parent="confirm/NinePatchRect"]
margin_left = 245.0
margin_top = 109.0
margin_right = 545.0
margin_bottom = 194.0
theme = ExtResource( 4 )
text = "BUY IT!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonNo" type="Button" parent="confirm/NinePatchRect"]
margin_left = 745.0
margin_top = 109.0
margin_right = 1045.0
margin_bottom = 194.0
theme = ExtResource( 4 )
text = "eh..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pockets" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pockets1" type="NinePatchRect" parent="pockets"]
margin_left = 1020.0
margin_right = 1280.0
margin_bottom = 80.0
texture = ExtResource( 2 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="pockets"]
position = Vector2( 1240, 40 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="totalMoney" type="Label" parent="pockets"]
margin_left = 1036.0
margin_top = 20.0
margin_right = 1217.0
margin_bottom = 59.0
theme = ExtResource( 10 )
text = "9999999"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="focus_entered" from="main/buttonExit" to="." method="_on_buttonExit_focus_entered"]
[connection signal="pressed" from="main/buttonExit" to="." method="_on_buttonExit_pressed"]
[connection signal="focus_entered" from="main/options/buttonItem0" to="." method="_on_buttonItem0_focus_entered"]
[connection signal="pressed" from="main/options/buttonItem0" to="." method="_on_buttonItem_pressed"]
[connection signal="focus_entered" from="main/options/buttonItem1" to="." method="_on_buttonItem1_focus_entered"]
[connection signal="pressed" from="main/options/buttonItem1" to="." method="_on_buttonItem_pressed"]
[connection signal="focus_entered" from="main/options/buttonItem2" to="." method="_on_buttonItem2_focus_entered"]
[connection signal="pressed" from="main/options/buttonItem2" to="." method="_on_buttonItem_pressed"]
[connection signal="focus_entered" from="main/options/buttonItem3" to="." method="_on_buttonItem3_focus_entered"]
[connection signal="pressed" from="main/options/buttonItem3" to="." method="_on_buttonItem_pressed"]
[connection signal="pressed" from="confirm/NinePatchRect/buttonYes" to="." method="_on_buttonYes_pressed"]
[connection signal="pressed" from="confirm/NinePatchRect/buttonNo" to="." method="_on_buttonNo_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
